# Tepora-alpha

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_WEB.md  RELEASE_REVIEW_REPORT.md  Taskfile.yml  UX_REVIEW_REPORT.md  VERIFICATION_REPORT.md  add-i18n.js  config.py  design_document.txt  find_i18n_issues.js  graph.py  i18n_issues.txt  llm_manager.py  main.py  mcp_tools_config.json  reproduce_privacy_fix.py  reproduce_privacy_fix_v2.py  requirements.txt  start_frontend.bat  start_server.bat  state.py  tool_manager.py  web_server.py
Tepora-app/backend/: .audit-requirements-final.txt  .audit-requirements-utf8.txt  .coverage  .env.example  .frozen-requirements.txt  .secrets.baseline  .tmp-requirements.txt  README.md  REFACTORING_SUMMARY.md  mypy_errors.txt  mypy_errors2.txt  mypy_errors3.txt  mypy_errors4.txt  mypy_errors5.txt  mypy_errors6.txt  mypy_errors_2.txt  mypy_errors_3.txt  mypy_errors_final.txt  mypy_final.txt  mypy_final_2.txt  pyproject.toml  pytest.ini  requirements.txt  ruff_errors.txt  server.py  tepora-backend.spec  test_output_2.txt
Tepora-app/backend-rs/: .gitignore  Cargo.toml  audit.toml  build_error.txt  clippy_log.txt  models.json  out.txt  test_out.txt
Tepora-app/backend-rs/config/: agents.yaml  mcp_policy.json
Tepora-app/backend-rs/src/: api.rs  config.rs  errors.rs  history.rs  lib.rs  llama.rs  logging.rs  main.rs  mcp.rs  mcp_installer.rs  mcp_registry.rs  models.rs  search.rs  security.rs  setup_state.rs  state.rs  test_support.rs  tooling.rs  vector_math.rs  wasm_runtime_shim_main.rs  ws.rs
Tepora-app/backend-rs/src/a2a/: mod.rs  protocol.rs
Tepora-app/backend-rs/src/actor/: manager.rs  messages.rs  mod.rs  session.rs
Tepora-app/backend-rs/src/agent/: exclusive_manager.rs  execution.rs  instructions.rs  mod.rs  modes.rs  planner.rs  policy.rs  runtime.rs  skill_registry.rs
Tepora-app/backend-rs/src/application/: episodic_memory.rs  knowledge.rs  mod.rs
Tepora-app/backend-rs/src/cli/: mod.rs  profile_manager.rs  runner.rs  types.rs
Tepora-app/backend-rs/src/context/: controller.rs  controller_blocks.rs  controller_recipe.rs  controller_render.rs  controller_tokens.rs  mod.rs  pipeline.rs  pipeline_context.rs  prompt.rs  window.rs  worker.rs
Tepora-app/backend-rs/src/context/workers/: character_worker.rs  memory_worker.rs  mod.rs  persona_worker.rs  rag_worker.rs  search_worker.rs  system_worker.rs  tool_worker.rs
Tepora-app/backend-rs/src/core/: errors.rs  logging.rs  mod.rs  native_tools.rs  pii_detection.rs  security.rs  security_audit.rs  security_backup.rs  security_controls.rs  security_credentials.rs  security_permissions.rs
Tepora-app/backend-rs/src/core/config/: defaults.rs  migrator.rs  mod.rs  paths.rs  secrets.rs  service.rs  validation.rs  validation_primitives.rs  validation_sections.rs
Tepora-app/backend-rs/src/crdt/: mod.rs
Tepora-app/backend-rs/src/domain/: episodic_memory.rs  errors.rs  knowledge.rs  mod.rs
Tepora-app/backend-rs/src/em_llm/: boundary.rs  compression.rs  decay.rs  integrator.rs  mod.rs  ranking.rs  retrieval.rs  segmenter.rs  sentence.rs  service.rs  store.rs  tests.rs  types.rs
Tepora-app/backend-rs/src/graph/: builder.rs  loader.rs  mod.rs  node.rs  runtime.rs  schema.rs  state.rs  stream.rs
Tepora-app/backend-rs/src/graph/nodes/: agent_executor.rs  chat.rs  mod.rs  planner.rs  router.rs  search.rs  search_agentic.rs  search_agentic_support.rs  (+4 more)
Tepora-app/backend-rs/src/history/: mod.rs
Tepora-app/backend-rs/src/infrastructure/: episodic.rs  knowledge.rs  mod.rs
Tepora-app/backend-rs/src/llm/: external_loader_common.rs  llama_cpp.rs  llama_service.rs  lmstudio.rs  lmstudio_native_client.rs  mod.rs  model_resolution.rs  ollama.rs  ollama_native_client.rs  openai_compatible_client.rs  provider.rs  service.rs  tests.rs  types.rs
Tepora-app/backend-rs/src/mcp/: config_store.rs  connection_manager.rs  installer.rs  manager.rs  mod.rs  policy_manager.rs  state.rs  tests.rs  tool_executor.rs  types.rs
Tepora-app/backend-rs/src/memory/: mod.rs  qdrant.rs
Tepora-app/backend-rs/src/memory_v2/: mod.rs  sqlite_repository.rs  tests.rs  types.rs
Tepora-app/backend-rs/src/models/: discovery.rs  download.rs  event.rs  manager.rs  metadata.rs  mod.rs  registry.rs  selection.rs  types.rs
Tepora-app/backend-rs/src/rag/: context_builder.rs  engine.rs  lancedb.rs  mod.rs  sqlite.rs  store.rs
Tepora-app/backend-rs/src/sandbox/: mod.rs
Tepora-app/backend-rs/src/search/: mod.rs
Tepora-app/backend-rs/src/server/: mod.rs  router.rs
Tepora-app/backend-rs/src/state/: bootstrap.rs  error.rs  mod.rs
Tepora-app/backend-rs/src/tools/: dispatcher.rs  manager.rs  mod.rs  rag.rs  reranker.rs  search.rs  vector_math.rs  web.rs  web_security.rs
Tepora-app/backend-rs/src/workspace/: mod.rs
Tepora-app/backend-rs/tests/: architecture_conformance.rs  wasm_mcp_e2e.rs
Tepora-app/backend/config/: config.example.yml  mcp_policy.json
Tepora-app/backend/scripts/: verify_ollama.py  verify_thinking.py
Tepora-app/backend/src/core/: __init__.py  app_v2.py  chat_history_manager.py  embedding_provider.py  llm_manager.py  log_maintenance.py  state.py  tool_manager.py
Tepora-app/backend/src/tepora_server/: app_factory.py  state.py
Tepora-app/backend/tests/: conftest.py  test_a2a.py  test_api.py  test_api_extensions.py  test_attachment_limit.py  test_config_schema.py  test_config_service_redaction.py  test_contract_ws.py  test_custom_agent_service.py  test_llm_cache_config.py  test_llm_manager.py  test_llm_service_v3.py  test_loader_selection.py  test_mcp_registry.py  test_mcp_routes.py  test_memory_nodes.py  test_retrieval.py  test_segmenter.py  test_setup_models.py  test_setup_security.py  test_tool_manager.py  test_ws_e2e.py  test_ws_security.py
Tepora-app/backend/tests/core/: test_chat_history_manager.py  test_log_maintenance.py  test_model_manager_extended.py  test_models_imports.py  test_ollama_runner.py  test_startup_validator.py
Tepora-app/backend/tests/core_v2/: conftest.py  test_foundation_flow.py  test_llm_execution_flow.py  test_rag_search_flow.py
(+939 files in other folders)
