[package]
name = "tepora-backend"
version = "0.3.0-beta"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
lancedb = "0.26"
arrow-array = "54"
arrow-schema = "54"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures-util = "0.3"
urlencoding = "2"
semver = "1"
petgraph = "0.6"
fs2 = "0.4"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
rmcp = { version = "0.14.0", features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
schemars = "1"
ndarray = "0.15"

[dev-dependencies]
tempfile = "3"
