[package]
name = "tepora-backend"
version = "0.4.5"
edition = "2021"
default-run = "tepora-backend"
[lib]
name = "tepora_backend"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "wasm_runtime_shim"
path = "src/wasm_runtime_shim_main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
governor = { version = "0.10", features = ["std"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "json"] }
notify = "8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures-util = "0.3"
urlencoding = "2"
semver = "1"
petgraph = "0.6"
fs2 = "0.4"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
rmcp = { version = "0.14.0", features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
schemars = "1"
which = "8"
ndarray = "0.17"
aes-gcm = "0.10"
regex = "1"
keyring = "3.6.3"
rand = "0.9"
subtle = "2"
argon2 = "0.5"
jsonschema = "0.46.0"
tokenizers = "0.22"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.29"
automerge = "0.9"
tokio = { version = "1", features = ["macros"] }

[dependencies.wasmtime]
version = "43"
optional = true

[dependencies.wasmtime-wasi]
version = "43"
optional = true

[features]
default = []
redesign_crdt = []
redesign_sandbox = ["wasmtime", "wasmtime-wasi"]


